config/networkpolicy/networkpolicy.yaml
/home/oviner/DEV_REPOS/ocs-op/ocs-operator/config/networkpolicy/ocs-operator/networkpolicy.yamlapiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ocs-operator
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      name: ocs-operator
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ocs-metrics-exporter
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ocs-metrics-exporter
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 9443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ocs-provider-server
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app: ocsProviderApiServer
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
    ports:
    - protocol: TCP
      port: 50051
